# VideoCap

./: CMakeLists.txt
include/: VideoCap.h  VideoCap.hpp
source/: CapApp.cpp  VideoCap.cpp  main.cpp
